// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ai18nLintRule jsx StringLiteral 1`] = `
Array [
  Array [
    "\\"苹果\\" 未做国际化处理",
    Replacement {
      "length": 4,
      "start": 10,
      "text": "__('苹果')",
    },
  ],
]
`;

exports[`ai18nLintRule jsx element 1`] = `
Array [
  Array [
    "\\"标题\\" 未做国际化处理",
    Replacement {
      "length": 4,
      "start": 21,
      "text": "{__('标题')}",
    },
  ],
  Array [
    "\\"苹果\\" 未做国际化处理",
    Replacement {
      "length": 2,
      "start": 26,
      "text": "{ __('苹果') }",
    },
  ],
  Array [
    "\\"标签\\" 未做国际化处理",
    Replacement {
      "length": 4,
      "start": 40,
      "text": "{__('标签')}",
    },
  ],
  Array [
    "\\"香蕉\\" 未做国际化处理",
    Replacement {
      "length": 4,
      "start": 46,
      "text": "__('香蕉')",
    },
  ],
]
`;

exports[`ai18nLintRule 识别中文符号 1`] = `
Array [
  Array [
    "\\"苹果。，、？！；“”《》（）\\" 未做国际化处理",
    Replacement {
      "length": 16,
      "start": 10,
      "text": "__('苹果。，、？！；“”《》（）')",
    },
  ],
]
`;

exports[`ai18nLintRule 跳过已被 __ 和 __define 包裹的 1`] = `
Array [
  Array [
    "\\"西瓜\\" 未做国际化处理",
    Replacement {
      "length": 4,
      "start": 42,
      "text": "__('西瓜')",
    },
  ],
]
`;

exports[`ai18nLintRule 跳过非全中文字符串 1`] = `Array []`;
